fixed folder names

--- a/Readings/Readings.html
+++ b/Readings/Readings.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,18 +38,18 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in the
+                            <li><a class="dropdown-item" href="../the-12th-house/sun/sun-in-the-12th-house.html">Sun in
+                                    the
                                     12th House</a>
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon in
+                            <li><a class="dropdown-item" href="../the-12th-house/moon/moon-in-the-12th-house.html">Moon
+                                    in
                                     the 12th House</a>
                             </li>
                         </ul>
@@ -61,29 +61,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The Sun
+                                    href="../general-astrology/sun-signs/the-sun-in-the-signs.html">The
+                                    Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The Sun
+                                    href="../general-astrology/sun-houses/the-sun-in-the-houses.html">The
+                                    Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Research/research.html">Research</a>
+                        <a class="nav-link" href="../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -103,7 +105,7 @@
             <p class="flex-text">A detailed written analysis of your psychological traits, relationship patterns, and
                 career indicators.
             </p>
-            <a href="Birth Chart Report/birth-chart-report.html" class="flex-button btn btn-outline-primary">Learn
+            <a href="birth-chart/birth-chart-report.html" class="flex-button btn btn-outline-primary">Learn
                 More</a>
         </div>
         <div class="reading reading2">
@@ -112,7 +114,7 @@
             <p class="flex-text">A thorough written analysis of your relationship with a friend, lover, or family
                 member as it evolves over time.
             </p>
-            <a href="Relationship Report/relationship-report.html" class="flex-button btn btn-outline-primary">Learn
+            <a href="relationship/relationship-report.html" class="flex-button btn btn-outline-primary">Learn
                 More</a>
         </div>
         <div class="reading reading3">
@@ -121,7 +123,7 @@
             <p class="flex-text">A detailed written report that forecasts themes of the coming year and how you can
                 prepare for the challenges to come.
             </p>
-            <a href="Predictive Report/predictive-report.html" class="flex-button btn btn-outline-primary">Learn
+            <a href="predictive/predictive-report.html" class="flex-button btn btn-outline-primary">Learn
                 More</a>
         </div>
     </section>
@@ -130,7 +132,7 @@
         <h2>Would you prefer to have your reading on Zoom?</h2>
         <p>I offer Zoom readings to clients who have questions about their chart, specific areas of life, or who want to
             learn about their chart in a more conversational way.</p>
-        <a href="Zoom Reading/zoom-reading.html" class="btn btn-outline-primary">Learn More</a>
+        <a href="zoom-reading/zoom-reading.html" class="btn btn-outline-primary">Learn More</a>
     </section>
 
 
