--- a/Readings/relationship/relationship-report.html
+++ b/Readings/relationship/relationship-report.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -95,43 +95,52 @@
         </div>
     </nav>
 
-    <section class="header container-fluid">
-        <img class="d-block d-sm-none" src="../../Images/transits.png" alt="Sun in the 12th House">
-    </section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="birth-chart-report col-lg-5">
+                <h1>Relationship Report - $74.95</h1>
+                <p>Each report is unique, hand-written, and is anywhere between 4-7 pages in length. Your relationship
+                    report
+                    will be sent to you as a digital file approximately 7-14 days after it is purchased. All purchases
+                    are
+                    processed through Stripe, a secure third-party payment processing platform.</p>
+                <script async src="https://js.stripe.com/v3/buy-button.js">
+                </script>
 
-    <section class="sun-in-the-12th container-fluid">
-        <img class="title-img d-none d-sm-block" src="../../Images/transits.png" alt="Sun in the 12th House">
-        <h1>Transits: the Key to Unlocking the Twelfth House</h1>
-        <p class="date"><em>April 25, 2022</em></p>
-        <p>Transits can help unlock the potential of twelfth house planets, bringing their energy into consciousness. To
-            better understand how this works, let's pretend for a moment that the natal chart is a theater: the planets
-            are the actors, the signs are the costumes they wear, and the houses are the stages, or areas of life, on
-            which they act.</p>
-        <p>The actor scheduled to perform on the stage of the twelfth house never makes it to the performance. He was
-            thrown into a backstage closet long ago, and the door was locked behind him. The stage is empty, and if you
-            spend a great deal of time looking for him, you may eventually find the closet. If you're lucky, you may
-            even find the key.</p>
-        <p>Sometimes you need a little help finding the door and prying it open. That's where transits come in. Twelfth
-            house planets often lie dormant until they are hit by a transiting planet that shakes them from their
-            slumber.</p>
-        <p>When a transit activates a twelfth house planet, the energies that bubble up to the surface may surprise you.
-            If you're not prepared, you may feel blindsided by the intensity of your own feelings and attribute them to
-            other people or external causes instead of yourself. Self-sabotage, damaged relationships, and an intense
-            sense of inner confusion are all common experiences. Depending on the transiting planet and your reaction to
-            the feelings that arise, this could also be a very productive time for you.</p>
-        <p>For instance, I didn't start writing my own music until Uranus transited directly over my twelfth house
-            Venus. A lot of creative ideas suddenly came to the surface. It felt like a door opened somewhere beneath
-            the surface of my perception. My life became so much more rich and fulfilling than it had been before.</p>
-        <p>The beauty of astrology is that it can help identify challenging times in our lives so we can understand the
-            themes at play and work through them with greater awareness. If you'd like to discuss the current themes in
-            your life and see how astrology can help you, sign up for a free fifteen minute consultation.</p>
+                <stripe-buy-button class="buy-button" buy-button-id="buy_btn_1Q8T2y03bTlzVE5rntxT1suW"
+                    publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                </stripe-buy-button>
+            </div>
+            <div class="birth-chart-details  col-lg-7">
+                <h2><strong>1&rpar; Synastry</strong></h2>
+                <p>First, I will analyze basic compatibility between charts. Do you personalities clash? Is there great
+                    romantic chemistry but poor emotional chemistry? Do you share similar values? It tells us how well
+                    person A gets along with person B.</p>
+                <h2><strong>2&rpar; Composite Chart</strong></h2>
+                <p>This chart indicates how the relationship will play out over time. It's important to check the
+                    composite chart because a great composite can often make up for poor synastry. The clues we get from
+                    the composite will also tell you how other people view your relationship, how long it is likely to
+                    last, and the kind of experiences you attract as a couple.</p>
+                <h2><strong>3&rpar; The Composite + Synastry</strong></h2>
+                <p>When you compare the composite and synastry charts, you can see the ways in which you experience the
+                    relationship differently. You can also gain important insight into the source of challenging
+                    relationship dynamics. </p>
+                <h2><strong>4&rpar; Free Q&amp;A</strong></h2>
+                <p>As soon as you order your report, you are invited to reach out with any questions or apprehensions
+                    you may
+                    have about your reading. If you would like me to clarify any part of your birth report, or if I can
+                    answer
+                    any additional questions, I will correspond with you free of charge. It's my priority to make sure
+                    you are
+                    satisfied with your reading! Please don't hesitate to reach out.</p>
+            </div>
+        </div>
     </section>
 
     <section class="free-consultation container-fluid">
         <h3>Get a FREE 15 Minute Consultation</h3>
-        <p>Would you like to see how astrology can help you prepare for difficult times? Let's get to know each other
-            and discuss how I can help you.</p>
-        <a href="../Free Consultation/free-consultation.html" class="btn btn-outline-light">Learn More</a>
+        <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
+        <a href="../../free-consultation/freeconsultation.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
