--- a/Readings/zoom-reading/zoom-reading.html
+++ b/Readings/zoom-reading/zoom-reading.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -95,85 +95,50 @@
         </div>
     </nav>
 
-    <section class="header container-fluid">
-        <img class="d-block d-sm-none" src="../../Images/12thHSun.png" alt="Sun in the 12th House">
-    </section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="birth-chart-report col-lg-5">
+                <h1>Zoom Reading</h1>
+                <p>You can use the time to discuss your birth chart, get a relationship reading, or a predictive
+                    reading.
+                    We can also address a specific question during your reading if you prefer to focus on one topic. All
+                    purchases are processed through Stripe, a secure third-party payment processing platform.</p>
+            </div>
+            <div class="birth-chart-details col-lg-7">
+                <h2><strong>1&rpar; 30 Minute Reading</strong></h2>
+                <p>This is a
+                    great option if you would like to get a general sense of your birth chart or ask about a specific
+                    topic such as your inherent strengths and weaknesses, relationship patterns, or ideal career.</p>
+                <div class="book-button">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
 
-    <section class="sun-in-the-12th container-fluid">
-        <img class="title-img d-none d-sm-block" src="../../Images/12thDesktop.png" alt="Sun in the 12th House">
-        <h1>Sun in the Twelfth House</h1>
-        <p class="date"><em>November 26, 2022</em></p>
-        <p><em>When the sun falls in the house of secrets, places of confinement, and self-undoing, you are both blessed
-                and cursed with the qualities you need to survive this poorly understood house of astrology.</em></p>
-        <p>People with Sun in the twelfth house are sensitive, intuitive, and perhaps even psychic. They inhabit a world
-            of sensations and impressions that can either be so subtle as to be almost imperceptible, or so overwhelming
-            that they feel lost and confused. They struggle to know who they are because their sense of identity changes
-            depending on who or what they are around.</p>
-        <p>The twelfth house governs what remains when the concerns of the outer world are stripped away. Confinement to
-            monasteries, asylums, prisons, and hospitals serves to direct attention away from wordly cares into the
-            subtle gradations of inner experience that only become perceptible in isolation. It is in these quiet
-            moments that twelfth house suns come to know themselves.</p>
-        <h2>Why is this placement so challenging?</h2>
-        <p>People withe twelfth house suns are faced with a cirsis of identity. The sun, which governs the conscious,
-            rational aspects of the personality, falls in the house that governs unsconsiousness, irrationality, and
-            intangibility. The conscious center of the personality is unusually receptive to unconscious information,
-            which is experienced in the form of abstract impressions, intuitions, reveries, and dreams. People with sun
-            in the twelfth house may feel as though they are constantly moving through a strange dream that shifts and
-            changes depending on their environment. Making sense of this information can be increadibbly challenging,
-            and it begs the question: how can I define myself as an individual while remaining receptive to the
-            overwhelming unconscious information that I am constantly taking in?</p>
-        <p>It becomes necessary for people with this placement to discover what remains constant within them. They may
-            wonder: which of my experiences and assumptions are coming from other people, and which are coming from
-            within me? What is the difference between what is "within" and what is "without?" How do they influence each
-            other? The fundamental question is whether or not people with twelfth house suns can form an identity around
-            their inner reality. If they can't, they will suffer.</p>
-        <h2>Service, Boundaries, and Identity</h3>
-            <p>It is often said that residents of this house must either serve others or suffer. A true life of service
-                is a
-                life lived acknowledging the oneness of all beings, which is the ultimate fate of this placement, but
-                you
-                don't have to surrender healthy boundaries in order to do so. In fact, quite the opposite is true.
-                Healthy
-                boundaries indicate that you are in touch with how you truly feel, which is the same as being in touch
-                with
-                your "true self."</p>
-            <p>Once you discover your true thoughts and feelings, and practice living a life that is in harmony with
-                your
-                genuine needs, selfish desires and behaviors will begin to fall away on their own, and you will have
-                greater
-                capacity to serve others. This is easier said than done of course, but this placement ensures that you
-                will
-                have many opportunities to do so. The twelfth house is associated with self-undoing, but this is really
-                a
-                misguided way of thinking about the process that destroys the "false self." If you identify with the
-                false
-                self, which exists to protect you from perceived harm, this process will be very painful, but it is only
-                through this pain that you can discover what remains after everything false is stripped away.</p>
-            <img src="../../Images/WickerMan.jpg" alt="Christopher Lee in the Wicker Man">
-            <h2>The Wicker Man: A Cautionary Tale</h2>
-            <p>In the 1973 British folk horror film <em>The Wicker Man</em>, a police officer is sent to investigate a
-                crime on a remote Scottish isle where he is led to his death by the pagan townspeople. After a series of
-                strange and disorienting interactions with the locals, he is locked inside a large wooden cage built in
-                the likeness of a man and burned alive as a sacrifice to the fertility gods of the island. While
-                terrifying and bizarre, this story nudges at the initiatory process that underpins the strange logic of
-                the twelfth house. The "false self"--the police officer, out of touch with his primal feelings and
-                needs--is led to his death because he is unable to recognize his connection to the natural laws and
-                spiritual forces that govern the natural world. Perhaps if he had been more in touch with his own
-                primitive urges, he could have sensed and avoided his unfortunate fate. This story itself is a brutal
-                one, but as a metaphor, it touches on something true and useful: learn to see the connection between
-                yourself and the world around you, in all of its apparent savagery, brutality, strangeness, and mystery,
-                or perish on the alter of the "false self."</p>
-    </section>
+                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XSu03bTlzVE5rD00M0LzS"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
+                <h2><strong>2&rpar; 60 Minute Reading</strong></h2>
+                <p>This is a great option if you have a lot of questions or wish to discuss certain topics in depth. If
+                    we meet online, we can cover a lot more ground with your chart as I get to know you better. Feel
+                    free to ask questions about particular themes (such as career, relationships, living situation,
+                    etc.) or to inquire about specific areas of your chart.</p>
+                <div class="book-button">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
 
-    <section class="do-you-have container-fluid">
-        <div class="do-you-have-cont">
-            <h2>Do you have twelfth house planets?</h2>
-            <p>You may have planets in the twelfth house.<br> Click to find out more!</p>
-            <a href="../../Free Consultation/Do You Have 12th House Planets/do-you-have-12th-house-planets.html"
-                class="btn btn-outline-light">Learn More</a>
+                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XTb03bTlzVE5rVMqOgzXG"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
+            </div>
         </div>
     </section>
 
+    <section class="free-consultation container-fluid">
+        <h3>Get a FREE 15 Minute Consultation</h3>
+        <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
+        <a href="../../free-consultation/freeconsultation.html" class="btn btn-outline-light">Learn More</a>
+    </section>
 
     <footer>
         <div class="container-fluid">
