--- a/free-consultation/12th-house-planets/do-you-have-12th-house-planets.html
+++ b/free-consultation/12th-house-planets/do-you-have-12th-house-planets.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Request Your Free Consultation</title>
+    <title>12th House Astrolger</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Gowun+Batang:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,32 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult active"
-                            href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -97,20 +96,32 @@
     </nav>
 
     <section class="container-fluid">
-        <div class="birth-chart-report">
-            <h1>Request Your FREE Consultation</h1>
-            <p>To request a free consultation, follow the link below and list any questions you have coming into the
-                consultation in an email. Please also include your birth date, time, and location so I can take a
-                look at your chart ahead of time.</p>
-            <a href="mailto:twelfthhouseastrologer@gmail.com" class="btn btn-outline-primary">Free Consultation</a>
+        <div class="row">
+            <div class="birth-chart-report col-lg-5">
+                <h1>Do you have planets in the twelfth house?</h1>
+                <p>About one in twelve people have at least one planet in the twelfth house. To find out if you are one
+                    of them, follow the link below and enter you birth data. You will see a chart that is divided into
+                    what looks like twelve "pie slices." Find the "pie slice" that has the number 12 written on the
+                    inner corner, and look to see if there are any planets in that "pie slice."</p>
+                <p>Even if you don't have any planets in your twelfth house, you have an astrological sign there,
+                    which can tell us a lot about your unconscious tendencies.</p>
+                <a href="https://www.astro.com/cgi/ade.cgi?ract=genchart.cgi&lang=e" class="btn btn-outline-primary"
+                    target="_blank">Check Your Chart</a>
+            </div>
+            <div class="birth-chart-details col-lg-7">
+                <div class="example-chart">
+                    <img src="../../Images/examplechart.png" alt="Example Twelfth House Chart">
+                </div>
+            </div>
         </div>
     </section>
 
     <section class="free-consultation container-fluid">
-        <h3>Would you like to book a Zoom Reading?</h3>
-        <p>Would you prefer to learn about your chart over a Zoom conversation? Let's get to know each other and discuss
-            how I can help you.</p>
-        <a href="../../Readings/Zoom Reading/zoom-reading.html" class="btn btn-outline-light">Learn More</a>
+        <h3>Get a FREE 15 Minute Consultation</h3>
+        <p>Would you like to learn more about your twelfth house? Let's get to know each other and discuss how I can
+            help
+            you.</p>
+        <a href="../../Free Consultation/FreeConsultation.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
