--- a/free-consultation/form/free-consultation-form.html
+++ b/free-consultation/form/free-consultation-form.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult active" href="../FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
