--- a/free-consultation/freeconsultation.html
+++ b/free-consultation/freeconsultation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>12th House Astrolger</title>
+    <title>Free Consultation</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Gowun+Batang:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,17 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../the-12th-house/sun/sun-in-the-12th-house.html">Sun in
                                     the
                                     12th House</a>
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                            <li><a class="dropdown-item" href="../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +61,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/Tthe-sun-in-the-signs.html">The
+                                    href="../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -95,67 +93,51 @@
         </div>
     </nav>
 
-    <section class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
-            <div class="birth-chart-report col-lg-5">
-                <h1>Predictive Report - $74.95</h1>
-                <p class="report-description">Each report is unique, hand-written, and is anywhere between 7-10 pages in
-                    length. Your predictive
-                    report
-                    will be sent to you as a digital file approximately 7-14 days after it is purchased. All purchases
-                    are
-                    processed through Stripe, a secure third-party payment processing platform.</p>
-                <div class="button-container">
-                    <script async src="https://js.stripe.com/v3/buy-button.js">
-                    </script>
+            <section class="free-consultation col-lg-5">
+                <h1>Get a FREE 15 Minute Consultation</h1>
+                <p>Not sure where to begin? Let's get to know each other and discuss how I can help you.</p>
+                <a href="form/free-consultation-form.html" class="book-button btn btn-outline-primary"
+                    target="_blank">Book Now</a>
+            </section>
 
-                    <stripe-buy-button class="buy-button" buy-button-id="buy_btn_1Q8TFd03bTlzVE5rzSCGf1k2"
-                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
-                    </stripe-buy-button>
-                </div>
-                <p>Download an example chart to see what you can expect from your reading.</p>
-                <div class="button-container"><a href="Sample Predictive Report.pdf" target="_blank"
-                        class="btn btn-outline-primary">Download</a></div>
-            </div>
-            <div class="birth-chart-details  col-lg-7">
-                <h2><strong>1&rpar; Transits</strong></h2>
-                <p>Your reading will include a detailed analysis of your psychological traits and tendencies. This part
-                    of the
-                    reading explores the complex mental and emotional patterns that underpin your greatest gifts, as
-                    well as the
-                    challenging, contradictory aspects of your nature that are often at the root of frustrating
-                    behavioral
-                    patterns. With a little awareness, you can turn weakness into strengths, and lean into your
-                    strengths a
-                    little more deeply.The birth chart is like a picture taken of the planets at the moment of your
-                    birth. As time passes, the planets continue to move around the chart, forming new aspects to their
-                    positions in the original "snap shot." The relationship between transiting planets and the birth
-                    chart can point to important opportunities and challenges that are manifesting in your life this
-                    year. I check for significant transits of the outer planets (Jupiter, Saturn, Uranus, Neptune, and
-                    Pluto) to the "personal planets" (Sun, moon, Mercury, Venus, Mars), as well as the houses that
-                    Jupiter and Saturn are currently occupying to see how you will be affected in the coming year.</p>
-                <h2><strong>2&rpar; Progressions</strong></h2>
-                <p>As the progressed planets move through the signs and houses, and form aspects between each other, we
-                    can learn a lot about the "general atmosphere" of our life at a particular moment in time. The
-                    progressed moon, for instance, points to the prevailing emotional tone of the year, and can give us
-                    a sense of how supported you feel by your current life circumstances. Progressions can also portend
-                    moments of opportunity when new endeavors will be especially fruitful.</p>
-                <h2><strong>3&rpar; Transits + Progressions</strong></h2>
-                <p>Significant aspects between transits and progressed planets can reveal important themes and help
-                    paint a much richer picture of the year to come.</p>
-                <h2><strong>4&rpar; Free Q&amp;A</strong></h2>
-                <p>As soon as you order your report, you are invited to reach out with any questions or apprehensions
-                    you may have about your reading. If you would like me to clarify any part of your birth report, or
-                    if I can answer any additional questions, I will correspond with you free of charge. It's my
-                    priority to make sure you are satisfied with your reading! Please don't hesitate to reach out.</p>
-            </div>
+
+            <section class="free-consultation-text col-lg-7">
+                <p>Are you curious about 12th House Astrology but feel like you need more information? I offer a free 15
+                    minute
+                    consultation to answer any questions you may have and to discuss what you're looking for from an
+                    astrology
+                    reading.</p>
+                <p><em>Would you like to know how the twelfth house affects you personally?</em> I would love to briefly
+                    discuss what is going on in your twelfth house and how I can help you understand this unique corner
+                    of
+                    your
+                    chart.</p>
+                <p><em>Is there a particular area in your life, such as your career or relationships, you'd like to
+                        address?</em>
+                    Would you like to shed some light on self-destructive patterns you feel destined to repeat? Or
+                    perhaps
+                    learn
+                    what themes may play out in your life this year? This consultation helps me get to know you, and it
+                    helps me
+                    to find the best kind of reading for you.</p>
+            </section>
         </div>
+    </div>
+
+    <section class="lets-talk container-fluid">
+        <h2>Let's Talk About What You're Looking For.</h2>
+        <p class="top-p">Are you looking for something in your reading, but don't know how to ask for it? Are you not
+            sure what you're
+            looking for at all?
+        </p>
+        <p class="bottom-p">Let's talk about what you want from a reading so I can help you better.</p>
+        <a href="mailto:twelfthhouseastrologer@gmail.com" class="btn btn-outline-light">Contact Me</a>
     </section>
 
-    <section class="free-consultation container-fluid">
-        <h3>Get a FREE 15 Minute Consultation</h3>
-        <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
-        <a href="../../Free Consultation/FreeConsultation.html" class="btn btn-outline-light">Learn More</a>
+    <section>
+
     </section>
 
     <footer>
@@ -201,6 +183,8 @@
             </div>
         </div>
     </footer>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
