--- a/the-12th-house/understanding/understanding-the-12th-house.html
+++ b/the-12th-house/understanding/understanding-the-12th-house.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>12th House Astrolger</title>
+    <title>Understanding the 12th House</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Gowun+Batang:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -95,33 +95,48 @@
         </div>
     </nav>
 
-    <section class="header container-fluid">
-        <img class="d-block d-sm-none" src="../../Images/astrologicalhouses.png" alt="Sun in the 12th House">
+    <section class="understanding-the-12th container-fluid">
+        <h1>Understanding the 12th House</h1>
+        <p class="date"><em>October 4, 2022</em></p>
+        <p>The twelfth house rules secrets, hidden enemies, self-undoing, and places of confinement such as hospitals,
+            mental institutions, monastaries, and prisons. It is associated with the part of the human psyche where
+            reason breaks down and the strange metaphorical language of the subconscious mind reins supreme. It is the
+            realm of dreams and archetypes, the seat of the arcane, and a home to witches and wizards, martyrs and
+            saints, the scapegoats of society, and the ghosts of the collective unconscious. Those who lose their way in
+            this obscure, subliminal wasteland are overtaken by confusion, insanity, and loss of personal agency.</p>
+        <h2>Sounds pretty scary, but there's much more to the story.</h2>
+        <p>The twelfth house is associated with Pisces and the planet Neptune, and it is considered to be an unlucky
+            house that brings misery and restriction to people with one or more planets there. Some modern astrologers
+            prefer to interpret astrological charts through the lens of depth psychology. <em>Astrological placements
+                are seen not as a life sentence, but rather potentials that contain both positive and negative
+                atributes, and can be mastered with effort and awareness.</em></p>
+        <p>Although the twelfth house can bring misery and suffering, it is also a hidden entrance to a deeply
+            meaningful and fulfiilling life. If you put in the work to get in touch with the planets in your twelfth
+            house, you may discover hidden dimensions to your personality that bear immense potential. <em>The real
+                tragedy of the twelfth house is that people often overlook their own talents because they believe them
+                to be built upon mere fantasies or impossible dreams.</em>They will find a thousand reasons to dismiss
+            their private longings and intuitions, which if approached differently, would lead them to a more fulfilling
+            life. Here you have the man who dreams of becoming a writer, but never begins his book because he is afraid
+            he will discover that his dream is only a dream--that he lacks the talent, or that circumstances will
+            prevent him from succeeding, and that the painful sense of longing he feels toward not being able to realize
+            his dream will find concrete form. Ironically, the emotion he so desperately wishes to avoid is the grief of
+            unlived potential, which if avoided, becomes a self-fulfilling prophesy.</p>
+        <p>A little awareness goes a long way with the twelfth house because its misfortunes are usually self-inflicted.
+            What is avoided, rejected, or disowned in ourselves will pursue us in the form of frightening, upsetting, or
+            even destabilizing emotions that, if ignored, will manifest concretely, amplifying these feelings in an
+            unconscious attempt to resolve them. It is often the case that the emotions we seek to avoid are not so
+            frightening once we identify them, but they sit directly in our blind spot, and may require a great deal of
+            energy, courage, and awareness to perceive. No one can feel these emotions for you or decide what they mean
+            in the context of your life, but sometimes it can be helpful to get a fresh perspective from the outside.
+        </p>
     </section>
 
-    <section class="sun-in-the-12th container-fluid">
-        <img class="title-img d-none d-sm-block" src="../../Images/astrologicalhouses.png" alt="Sun in the 12th House">
-        <h1>What are the Astrological Houses?</h1>
-        <p class="date"><em>April 12, 2022</em></p>
-        <p>For those unfamiliar with the house system, it's like a lens that sits over the natal chart, dividing it into
-            twelve "pie slices." Each house corresponds to an astrological sign and changes the way the planets express
-            their energies. </p>
-        <p>To explain this further, here's a useful analogy I came across years ago: if you imagine the natal chart is
-            like a theater, the planets are the actors, the signs are the costumes they wear, and the houses are the
-            stages they act upon--that is, the areas of life in which they play out.</p>
-        <p>Some houses amplify the expression of the planets, while others suppress of distort them. For instance,
-            planets that fall in the first house of personal expression are notoriously loud, but planets that fall in
-            teh seventh or twelfth houses may be difficult to relate to.</p>
-        <p>If you have a planet in the twelfth, you may not relate to this planet at all. If your moon falls there, for
-            instance, it may feel as though that part of you has fallen into a black hole and you may need to use
-            meditation, time spent alone, or making art, poetry, or music to get in touch with your true feelings.</p>
-    </section>
-
-    <section class="free-consultation container-fluid">
-        <h3>Get a FREE 15 Minute Consultation</h3>
-        <p>Not sure where to begin? Let's get to know each other
-            and discuss how I can help you.</p>
-        <a href="../Free Consultation/free-consultation.html" class="btn btn-outline-light">Learn More</a>
+    <section class="good-fit container-fluid">
+        <h3>Are you a good fit for 12th House Astrology?</h3>
+        <p>Do you struggle to connect with yourself on a deeper level? Do you repeat the same emotional and
+            relationship patterns over and over again? Would you benefit from a fresh perspective on your life?</p>
+        <p>To learn about the readings I offer,<br> follow the link below!</p>
+        <a href="../../Readings/Readings.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
