--- a/Readings/birth-chart/birth-chart-report.html
+++ b/Readings/birth-chart/birth-chart-report.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,19 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -98,30 +98,67 @@
     <section class="container-fluid">
         <div class="row">
             <div class="birth-chart-report col-lg-5">
-                <h1>Do you have planets in the twelfth house?</h1>
-                <p>About one in twelve people have at least one planet in the twelfth house. To find out if you are one
-                    of them, follow the link below and enter you birth data. You will see a chart that is divided into
-                    what looks like twelve "pie slices." Find the "pie slice" that has the number 12 written on the
-                    inner corner, and look to see if there are any planets in that "pie slice."</p>
-                <p>Even if you don't have any planets in your twelfth house, you have an astrological sign there,
-                    which can tell us a lot about your unconscious tendencies.</p>
-                <a href="https://www.astro.com/cgi/ade.cgi?ract=genchart.cgi&lang=e" class="btn btn-outline-primary"
-                    target="_blank">Check Your Chart</a>
+                <h1>Birth Chart Report - $74.95</h1>
+                <p class="report-description">Each report is unique, hand-written, and is anywhere between 6-9 pages in
+                    length. Your birth chart
+                    report
+                    will be sent to you as a digital file approximately 7-14 days after it is purchased. All purchases
+                    are
+                    processed through Stripe, a secure third-party payment processing platform.</p>
+                <div class="button-container">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
+
+                    <stripe-buy-button class="buy-button" buy-button-id="buy_btn_1Q8GBM03bTlzVE5r0LyHgTbw"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
+                <p class="example-chart">Download an example chart to see what you can expect from your reading.</p>
+                <div class="button-container"><a href="Sample Chart.pdf" target="_blank"
+                        class="btn btn-outline-primary">Download</a></div>
             </div>
             <div class="birth-chart-details col-lg-7">
-                <div class="example-chart">
-                    <img src="../../Images/examplechart.png" alt="Example Twelfth House Chart">
-                </div>
+                <h2><strong>1&rpar; Psychological Traits</strong></h2>
+                <p>Your reading will include a detailed analysis of your psychological traits and tendencies. This part
+                    of the
+                    reading explores the complex mental and emotional patterns that underpin your greatest gifts, as
+                    well as the
+                    challenging, contradictory aspects of your nature that are often at the root of frustrating
+                    behavioral
+                    patterns. With a little awareness, you can turn weakness into strengths, and lean into your
+                    strengths a
+                    little more deeply.</p>
+                <h2><strong>2&rpar; Relationship Patterns</strong></h2>
+                <p>Every chart has indicators of your "romantic style," as well as the themes that define your
+                    friendships,
+                    partnerships, and romantic relationships. Your reading will tell you not only what you look for in
+                    love, but
+                    it will also identify the root issues behind repetitive relationship patterns.</p>
+                <h2><strong>3&rpar; Career</strong></h2>
+                <p>Whether or not you have already committed to a career path, astrological career indicators can tell
+                    us a lot
+                    about who you are. This section is an excellent resource for students who are choosing what to
+                    study, or for
+                    people who are considering a change of career. Career indicators tell us how you are most likely to
+                    be
+                    successful, the kind of work you find most satisfying, and the type of working environment that most
+                    inspires you!</p>
+                <h2><strong>4&rpar; Free Q&amp;A</strong></h2>
+                <p>As soon as you order your report, you are invited to reach out with any questions or apprehensions
+                    you may
+                    have about your reading. If you would like me to clarify any part of your birth report, or if I can
+                    answer
+                    any additional questions, I will correspond with you free of charge. It's my priority to make sure
+                    you are
+                    satisfied with your reading! Please don't hesitate to reach out.</p>
             </div>
         </div>
     </section>
 
     <section class="free-consultation container-fluid">
         <h3>Get a FREE 15 Minute Consultation</h3>
-        <p>Would you like to learn more about your twelfth house? Let's get to know each other and discuss how I can
-            help
-            you.</p>
-        <a href="../../Free Consultation/FreeConsultation.html" class="btn btn-outline-light">Learn More</a>
+        <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
+        <a href="../../free-consultation/freeconsultation.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
