--- a/Readings/birth-chart/purchase-birth-chart-report/purchase-birth-chart-report.html
+++ b/Readings/birth-chart/purchase-birth-chart-report/purchase-birth-chart-report.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+            <a class="navbar-brand" href="../../../index.html">
+                <img src="../../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,19 +38,20 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Sun in the 12th House/sun-in-the-12th-house.html">Sun in
+                                    href="../../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
                                     the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon
+                                    href="../../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
                                     in
                                     the 12th House</a>
                             </li>
@@ -63,31 +64,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -97,39 +98,21 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="birth-chart-report col-lg-5">
-                <h1>Zoom Reading</h1>
-                <p>You can use the time to discuss your birth chart, get a relationship reading, or a predictive
-                    reading.
-                    We can also address a specific question during your reading if you prefer to focus on one topic. All
-                    purchases are processed through Stripe, a secure third-party payment processing platform.</p>
+            <div class="birth-chart-report col-lg-7">
+                <h1>Purchase Your Birth Chart Report</h1>
+                <script async src="https://js.stripe.com/v3/buy-button.js">
+                </script>
+
+                <stripe-buy-button buy-button-id="buy_btn_1Q8GBM03bTlzVE5r0LyHgTbw"
+                    publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                </stripe-buy-button>
             </div>
-            <div class="birth-chart-details col-lg-7">
-                <h2><strong>1&rpar; 30 Minute Reading</strong></h2>
-                <p>This is a
-                    great option if you would like to get a general sense of your birth chart or ask about a specific
-                    topic such as your inherent strengths and weaknesses, relationship patterns, or ideal career.</p>
-                <div class="book-button">
-                    <script async src="https://js.stripe.com/v3/buy-button.js">
-                    </script>
-
-                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XSu03bTlzVE5rD00M0LzS"
-                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
-                    </stripe-buy-button>
-                </div>
-                <h2><strong>2&rpar; 60 Minute Reading</strong></h2>
-                <p>This is a great option if you have a lot of questions or wish to discuss certain topics in depth. If
-                    we meet online, we can cover a lot more ground with your chart as I get to know you better. Feel
-                    free to ask questions about particular themes (such as career, relationships, living situation,
-                    etc.) or to inquire about specific areas of your chart.</p>
-                <div class="book-button">
-                    <script async src="https://js.stripe.com/v3/buy-button.js">
-                    </script>
-
-                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XTb03bTlzVE5rVMqOgzXG"
-                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
-                    </stripe-buy-button>
-                </div>
+            <div class="birth-chart-details col-lg-5">
+                <h2>1&rpar; Birth Chart Report - $74.95</h2>
+                <h2>2&rpar; Relationship Report - $74.95</h2>
+                <h2>3&rpar; Predictive Report - $74.95</h2>
+                <h2>4&rpar; 30 Minute Reading - $30</h2>
+                <h2>5&rpar; 60 Minute Reading - $50</h2>
             </div>
         </div>
     </section>
@@ -137,7 +120,7 @@
     <section class="free-consultation container-fluid">
         <h3>Get a FREE 15 Minute Consultation</h3>
         <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
-        <a href="../../Free Consultation/FreeConsultation.html" class="btn btn-outline-light">Learn More</a>
+        <a href="../Free Consultation/free-consultation.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
