--- a/Readings/predictive/predictive-report.html
+++ b/Readings/predictive/predictive-report.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Understanding the 12th House</title>
+    <title>12th House Astrolger</title>
 
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Gowun+Batang:wght@400;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
+                <img src="../../images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -38,18 +38,20 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../Understanding the 12th House/understanding-the-12th-house.html">Understanding
+                                    href="../../the-12th-house/understanding/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="../Sun in the 12th House/sun-in-the-12th-house.html">Sun
-                                    in the
+                            <li><a class="dropdown-item" href="../../the-12th-house/sun/sun-in-the-12th-house.html">Sun
+                                    in
+                                    the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon in
+                                    href="../../the-12th-house/moon/moon-in-the-12th-house.html">Moon
+                                    in
                                     the 12th House</a>
                             </li>
                         </ul>
@@ -61,31 +63,31 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
+                                    href="../../general-astrology/sun-signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
+                                    href="../../general-astrology/sun-houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
+                                    href="../../general-astrology/moon-signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/research.html">Research</a>
+                        <a class="nav-link" href="../../research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
+                        <a class="nav-link active" href="../../articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="../../readings/readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="../../free-consultation/freeconsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
@@ -93,48 +95,67 @@
         </div>
     </nav>
 
-    <section class="understanding-the-12th container-fluid">
-        <h1>Understanding the 12th House</h1>
-        <p class="date"><em>October 4, 2022</em></p>
-        <p>The twelfth house rules secrets, hidden enemies, self-undoing, and places of confinement such as hospitals,
-            mental institutions, monastaries, and prisons. It is associated with the part of the human psyche where
-            reason breaks down and the strange metaphorical language of the subconscious mind reins supreme. It is the
-            realm of dreams and archetypes, the seat of the arcane, and a home to witches and wizards, martyrs and
-            saints, the scapegoats of society, and the ghosts of the collective unconscious. Those who lose their way in
-            this obscure, subliminal wasteland are overtaken by confusion, insanity, and loss of personal agency.</p>
-        <h2>Sounds pretty scary, but there's much more to the story.</h2>
-        <p>The twelfth house is associated with Pisces and the planet Neptune, and it is considered to be an unlucky
-            house that brings misery and restriction to people with one or more planets there. Some modern astrologers
-            prefer to interpret astrological charts through the lens of depth psychology. <em>Astrological placements
-                are seen not as a life sentence, but rather potentials that contain both positive and negative
-                atributes, and can be mastered with effort and awareness.</em></p>
-        <p>Although the twelfth house can bring misery and suffering, it is also a hidden entrance to a deeply
-            meaningful and fulfiilling life. If you put in the work to get in touch with the planets in your twelfth
-            house, you may discover hidden dimensions to your personality that bear immense potential. <em>The real
-                tragedy of the twelfth house is that people often overlook their own talents because they believe them
-                to be built upon mere fantasies or impossible dreams.</em>They will find a thousand reasons to dismiss
-            their private longings and intuitions, which if approached differently, would lead them to a more fulfilling
-            life. Here you have the man who dreams of becoming a writer, but never begins his book because he is afraid
-            he will discover that his dream is only a dream--that he lacks the talent, or that circumstances will
-            prevent him from succeeding, and that the painful sense of longing he feels toward not being able to realize
-            his dream will find concrete form. Ironically, the emotion he so desperately wishes to avoid is the grief of
-            unlived potential, which if avoided, becomes a self-fulfilling prophesy.</p>
-        <p>A little awareness goes a long way with the twelfth house because its misfortunes are usually self-inflicted.
-            What is avoided, rejected, or disowned in ourselves will pursue us in the form of frightening, upsetting, or
-            even destabilizing emotions that, if ignored, will manifest concretely, amplifying these feelings in an
-            unconscious attempt to resolve them. It is often the case that the emotions we seek to avoid are not so
-            frightening once we identify them, but they sit directly in our blind spot, and may require a great deal of
-            energy, courage, and awareness to perceive. No one can feel these emotions for you or decide what they mean
-            in the context of your life, but sometimes it can be helpful to get a fresh perspective from the outside.
-        </p>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="birth-chart-report col-lg-5">
+                <h1>Predictive Report - $74.95</h1>
+                <p class="report-description">Each report is unique, hand-written, and is anywhere between 7-10 pages in
+                    length. Your predictive
+                    report
+                    will be sent to you as a digital file approximately 7-14 days after it is purchased. All purchases
+                    are
+                    processed through Stripe, a secure third-party payment processing platform.</p>
+                <div class="button-container">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
+
+                    <stripe-buy-button class="buy-button" buy-button-id="buy_btn_1Q8TFd03bTlzVE5rzSCGf1k2"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
+                <p>Download an example chart to see what you can expect from your reading.</p>
+                <div class="button-container"><a href="Sample Predictive Report.pdf" target="_blank"
+                        class="btn btn-outline-primary">Download</a></div>
+            </div>
+            <div class="birth-chart-details  col-lg-7">
+                <h2><strong>1&rpar; Transits</strong></h2>
+                <p>Your reading will include a detailed analysis of your psychological traits and tendencies. This part
+                    of the
+                    reading explores the complex mental and emotional patterns that underpin your greatest gifts, as
+                    well as the
+                    challenging, contradictory aspects of your nature that are often at the root of frustrating
+                    behavioral
+                    patterns. With a little awareness, you can turn weakness into strengths, and lean into your
+                    strengths a
+                    little more deeply.The birth chart is like a picture taken of the planets at the moment of your
+                    birth. As time passes, the planets continue to move around the chart, forming new aspects to their
+                    positions in the original "snap shot." The relationship between transiting planets and the birth
+                    chart can point to important opportunities and challenges that are manifesting in your life this
+                    year. I check for significant transits of the outer planets (Jupiter, Saturn, Uranus, Neptune, and
+                    Pluto) to the "personal planets" (Sun, moon, Mercury, Venus, Mars), as well as the houses that
+                    Jupiter and Saturn are currently occupying to see how you will be affected in the coming year.</p>
+                <h2><strong>2&rpar; Progressions</strong></h2>
+                <p>As the progressed planets move through the signs and houses, and form aspects between each other, we
+                    can learn a lot about the "general atmosphere" of our life at a particular moment in time. The
+                    progressed moon, for instance, points to the prevailing emotional tone of the year, and can give us
+                    a sense of how supported you feel by your current life circumstances. Progressions can also portend
+                    moments of opportunity when new endeavors will be especially fruitful.</p>
+                <h2><strong>3&rpar; Transits + Progressions</strong></h2>
+                <p>Significant aspects between transits and progressed planets can reveal important themes and help
+                    paint a much richer picture of the year to come.</p>
+                <h2><strong>4&rpar; Free Q&amp;A</strong></h2>
+                <p>As soon as you order your report, you are invited to reach out with any questions or apprehensions
+                    you may have about your reading. If you would like me to clarify any part of your birth report, or
+                    if I can answer any additional questions, I will correspond with you free of charge. It's my
+                    priority to make sure you are satisfied with your reading! Please don't hesitate to reach out.</p>
+            </div>
+        </div>
     </section>
 
-    <section class="good-fit container-fluid">
-        <h3>Are you a good fit for 12th House Astrology?</h3>
-        <p>Do you struggle to connect with yourself on a deeper level? Do you repeat the same emotional and
-            relationship patterns over and over again? Would you benefit from a fresh perspective on your life?</p>
-        <p>To learn about the readings I offer,<br> follow the link below!</p>
-        <a href="../../Readings/Readings.html" class="btn btn-outline-light">Learn More</a>
+    <section class="free-consultation container-fluid">
+        <h3>Get a FREE 15 Minute Consultation</h3>
+        <p>Not sure if this is the reading for you? Let's get to know each other and discuss how I can help you.</p>
+        <a href="../../free-consultation/freeconsultation.html" class="btn btn-outline-light">Learn More</a>
     </section>
 
     <footer>
